// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormAndReviewList component expands and collapses items 1`] = `
<FormAndReviewItem
  collapsedComponent={[Function]}
  expandedComponent={[Function]}
  initialCollapsed={true}
  prop1="passed down"
  prop2="passed down"
  prop3="passed down"
>
  <div
    className="form-and-review-list--item__collapsed"
  >
    <Collapsed
      expand={[Function]}
      prop1="passed down"
      prop2="passed down"
      prop3="passed down"
    >
      <div />
    </Collapsed>
  </div>
</FormAndReviewItem>
`;

exports[`FormAndReviewList component expands and collapses items 2`] = `
<FormAndReviewItem
  collapsedComponent={[Function]}
  expandedComponent={[Function]}
  initialCollapsed={true}
  prop1="passed down"
  prop2="passed down"
  prop3="passed down"
>
  <div
    className="form-and-review-list--item__expanded"
  >
    <Expanded
      collapse={[Function]}
      prop1="passed down"
      prop2="passed down"
      prop3="passed down"
    >
      <div />
    </Expanded>
    <Button
      onClick={[Function]}
      type="button"
      variation="primary"
    >
      <button
        className="ds-c-button ds-c-button--primary"
        onClick={[Function]}
        type="button"
      >
        Done
      </button>
    </Button>
  </div>
</FormAndReviewItem>
`;

exports[`FormAndReviewList component expands and collapses items 3`] = `
<FormAndReviewItem
  collapsedComponent={[Function]}
  expandedComponent={[Function]}
  initialCollapsed={true}
  prop1="passed down"
  prop2="passed down"
  prop3="passed down"
>
  <div
    className="form-and-review-list--item__collapsed"
  >
    <Collapsed
      expand={[Function]}
      prop1="passed down"
      prop2="passed down"
      prop3="passed down"
    >
      <div />
    </Collapsed>
  </div>
</FormAndReviewItem>
`;

exports[`FormAndReviewList component renders properly with just one item 1`] = `
<div
  className="form-and-review-list"
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    index={0}
    initialCollapsed={true}
    item={
      Object {
        "initialCollapsed": true,
        "key": "one",
      }
    }
    key="one"
    onDeleteClick={null}
  />
  <Button
    className="visibility--screen"
    onClick={[MockFunction]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with multiple items 1`] = `
<div
  className="form-and-review-list"
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    index={0}
    initialCollapsed={true}
    item={
      Object {
        "initialCollapsed": true,
        "key": "one",
      }
    }
    key="one"
    onDeleteClick={[Function]}
  />
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    index={1}
    initialCollapsed={false}
    item={
      Object {
        "initialCollapsed": false,
        "key": "two",
      }
    }
    key="two"
    onDeleteClick={[Function]}
  />
  <Button
    className="visibility--screen"
    onClick={[MockFunction]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with no items 1`] = `
<div
  className="form-and-review-list"
>
  <Alert
    variation="error"
  >
    displayed when there is no data
  </Alert>
  <Button
    className="visibility--screen"
    onClick={[MockFunction]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly without an add button if the onAddClick prop is missing 1`] = `
<div
  className="form-and-review-list"
>
  <Alert
    variation="error"
  >
    displayed when there is no data
  </Alert>
</div>
`;
